# pykc-websockets-workshop

./: .flake8  .gitignore  README.md  chat-db-compose.yml  genenv.py  gethatch.ps1  gethatch.sh  pyproject.toml  seed.py  server.toml  tailwind.config.js  tailwind.css  windows_app.py  windows_cov_suite.ps1  windows_cov_suite.py  windows_test_app.py  windows_test_suite.ps1  windows_test_suite.py
.github/workflows/: ci.yml
docs/: run_doctests.py  serve.py
src/pykcworkshop/: __init__.py  logs.py  utils.py
src/pykcworkshop/chat/: __init__.py  constants.py  tokens.py  types.py
src/pykcworkshop/chat/api/: __init__.py
src/pykcworkshop/chat/api/http/: __init__.py  helpers.py  v1.py
src/pykcworkshop/chat/api/websockets/: __init__.py  helpers.py  v1.py
src/pykcworkshop/chat/db/: __init__.py  columns.py  models.py  sessions.py
src/pykcworkshop/chat/static/: chat-ui.mjs  chat.css  index.mjs  modals.mjs  resources.mjs  user-info.mjs
src/pykcworkshop/chat/static/utils/: helpers.mjs  shared_state.mjs  ui.mjs
src/pykcworkshop/chat/templates/chat/: index.html
tests/: __init__.py  conftest.py  helpers.py
tests/http/: auth_test.py  conftest.py  room_membership_test.py  rooms_test.py  users_test.py
tests/websockets/: auth_test.py  chat_history_test.py  chat_message_test.py  client_sync_test.py  conftest.py  connection_semantics_test.py  direct_message_test.py  form_validation_test.py  helpers.py  member_status_test.py
